--- a/141-Liberty-InstantOn-Serverless/Dockerfile
+++ b/141-Liberty-InstantOn-Serverless/Dockerfile
@@ -1,4 +1,4 @@
-FROM icr.io/appcafe/websphere-liberty:kernel-java21-openj9-ubi-minimal
+FROM icr.io/appcafe/open-liberty:kernel-slim-java21-openj9-ubi-minimal
 
 ARG VERSION=1.0
 ARG REVISION=SNAPSHOT
@@ -17,6 +17,6 @@ LABEL \
   description="This image contains the system microservice running with the Open Liberty runtime."
 
 COPY --chown=1001:0 src/main/liberty/config/ /config/
+RUN features.sh
 COPY --chown=1001:0 target/*.war /config/apps/
 RUN configure.sh
-RUN checkpoint.sh beforeAppStart
